--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <script>
         var xfbotConfig = {
             // --- Core Settings ---
-            apiEndpoint: '/xfai/bot/', // IMPORTANT: Update with your real API endpoint
-            userId: 'botdemo',
+            apiEndpoint: 'https://xf.com.mt/xfai/bot/', 
+            userId: 'botdemo', // IMPORTANT: Update with your real USER ID
 
             // --- Header Customization ---
             headerTitle: 'Support Bot',
