--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
         </p>
         <div style="overflow-x:auto;padding:10px;background-color:#fafafa;">
             <pre style="color:#00478a;"><code>
-&lt;script&gt;
+    &lt;script&gt;
     var xfbotConfig = {
-        apiEndpoint: 'https://xf.com.mt/xfai/bot/',
-        userId: 'botdemo',
+    apiEndpoint: 'https://xf.com.mt/xfai/bot/',
+    userId: 'botdemo' // IMPORTANT: Update with your real USER ID after registration,
 
-        headerTitle: 'Support Bot',
-        headerBgColor: '#ffd042',
-        headerTextColor: '#ffffff',
+    headerTitle: 'Support Bot',
+    headerBgColor: '#ffd042',
+    headerTextColor: '#ffffff',
 
-        toggleButtonBgColor: '#ffd800',
-        toggleButtonOpacity: 0.9,
+    toggleButtonBgColor: '#ffd800',
+    toggleButtonOpacity: 0.9,
 
-        chatBubbleUserColor: '#333333',
-        chatBubbleBotColor: '#ffffff',
-        chatTextColorUser: '#ffffff',
-        chatTextColorBot: '#333333',
+    chatBubbleUserColor: '#333333',
+    chatBubbleBotColor: '#ffffff',
+    chatTextColorUser: '#ffffff',
+    chatTextColorBot: '#333333',
 
-        inputPlaceholder: 'Type your message...',
+    inputPlaceholder: 'Type your message...',
     };
-&lt;/script&gt;
-&lt;script src="https://psanilp.github.io/xfbot/xfbot.min.js" defer&gt;&lt;/script&gt;
+    &lt;/script&gt;
+    &lt;script src="https://psanilp.github.io/xfbot/xfbot.min.js" defer&gt;&lt;/script&gt;
 </code></pre>
         </div>
     </div>
