--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
     <div style="width:90%">
         <h1>This is Your Company Website</h1>
         <p>
-            You can add an AI chatbot to your website by inserting two script tags to any web page.
-           
-           
+            You can integrate an AI chatbot into your website by adding two script tags to any page. This will display a circular button in the bottom-right corner, allowing visitors to initiate a chat session.
         </p>
         <p>
-            A circular button in the bottom-right corner will appear
-            and it will allow your customers to interact with your website using AI. It will respond to information that you define!
-            At the end of the interaction, the transcript will be emailed to you.
+            The chatbot operates using content you define—such as your company’s terms and conditions, FAQs, service agreements, and other reference materials. This ensures responses are specific to your business context.
+        </p> <p>
+            At the end of each interaction, a transcript of the conversation is automatically emailed to you for review or follow-up.
+
         </p>
+        <h5>Add the following Script Tags to your website</h5>
         <div style="overflow-x:auto;padding:10px;background-color:#fafafa;">
             <pre style="color:#00478a;"><code>
     &lt;script&gt;
     var xfbotConfig = {
     apiEndpoint: 'https://xf.com.mt/xfai/bot/',
-    userId: 'botdemo' // IMPORTANT: Update with your real USER ID after registration,
+    userId: 'botdemo' // IMPORTANT: Update with your real USER ID,
 
+    //Other optional configuration
     headerTitle: 'Support Bot',
     headerBgColor: '#ffd042',
     headerTextColor: '#ffffff',
