Update image sources to use HTTPS links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Instant AI Chat Support<br>Tailored to Your Business
             </h2>
             <div class="text-center mb-6">
-                <img class="max-h-20 mx-auto" src="assets/mizr.png" />
+                <img class="max-h-20 mx-auto" src="https://xf.com.mt/assets/mizr.png" />
             </div>
             <div class="text-center font-bold mb-6">
                 🔍 Powered by your own content: FAQs, service agreements, policies, and more
@@ -41,7 +41,7 @@
                 <div class="w-full md:w-1/2 p-4">
                     <div class="space-y-4">
                         <div class="h-[250px] mb-8">
-                            <img src="assets/repl.png" class="h-full mx-auto" />
+                            <img src="https://xf.com.mt/assets/repl.png" class="h-full mx-auto" />
                         </div>
                         <div class="text-2xl font-bold text-center xf-green mb-4">
                             Add AI Chatbot to Your Website in Seconds
@@ -104,7 +104,7 @@
 
                 <h2 class="font-bold mb-2">Main Script Tag</h2>
                 <pre style="color: #00478a; background-color: #fff; padding: 1rem; overflow-x:auto"><code>
-    &lt;script src="https://psanilp.github.io/xfbot/xfbot.min.js" defer&gt;&lt;/script&gt;
+    &lt;script src="https://psanilp.github.io/xfbot/bot.js" defer&gt;&lt;/script&gt;
 </code></pre>
             </div>
 
