--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section id="home" class="bg-gradient-to-b from-blue-100 to-gray-50 py-20 text-center">
         <div class="container mx-auto px-4 mt-20">
             <h2 class="text-3xl md:text-5xl font-bold text-gray-900 mb-6 animate-fade-in">
-                Instant AI Chat Support<br>Tailored to Your Business
+                Add AI Chatbot to your website<br>In minutes, without writing any code.
             </h2>
             <div class="text-center mb-6">
                 <img class="max-h-20 mx-auto" src="https://xf.com.mt/assets/mizr.png" />
@@ -88,7 +88,7 @@
             <div class="my-4">
                 <h3 class="text-3xl mt-8 font-bold">Setting Up</h3>
                 <div class="mb-4">
-                    <p class="my-2">To begin using the AI chatbot, sign up and set your initial content.</p>
+                    <p class="my-2">To begin using the AI chatbot, sign up at repliii.com and set your initial content.</p>
                     <p>
                         This content acts as the foundation for how the chatbot understands intent and responds to user queries on your website.
                         Once configured, the chatbot will tailor its answers based on the context you provide, delivering intelligent, relevant responses every time a visitor on your website
@@ -113,7 +113,7 @@
     &lt;script&gt;
                  
     var xfbotConfig = {
-    apiEndpoint: 'https://xf.com.mt/xfai/bot/',
+    apiEndpoint: 'https://xf.com.mt/repliii/bot/',
     userId: 'botdemo' // IMPORTANT: Update with your real USER ID,
 
     //Other optional configuration
@@ -130,15 +130,12 @@
     chatTextColorBot: '#333333',
 
     inputPlaceholder: 'Type your message...',
- // ... other settings ...
-
-        // --- NEW SVG Customization ---
-        // This will override the default logo with the one defined above
-        svgLogo:  '<svg>..</svg>', 
+    // This will override the default logo with the one defined above
+     svgLogo:  '<svg>..</svg>', 
         
-        // They could also override other icons, e.g.:
-        // svgSend: '<svg>...</svg>',
-        // svgLoader: '<div>Loading...</div>' // It doesn't even have to be an SVG!
+    // You can also override other icons, e.g.:
+    // svgSend: '<svg>...</svg>',
+    // svgLoader: '<div>Loading...</div>' // It doesn't even have to be an SVG!
     };
     &lt;/script&gt;
 </code></pre>
@@ -155,7 +152,7 @@
     <script>
         var xfbotConfig = {
             // --- Core Settings ---
-            apiEndpoint: 'https://xf.com.mt/xfai/bot/',
+            apiEndpoint: 'https://xf.com.mt/repliii/bot/',
             //apiEndpoint: '/xfai/bot/',
             userId: 'botdemo', // IMPORTANT: Update with your real USER ID
 
